@@ -1,3 +1,11 @@
+2015-08-31  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
+	2015-08-27  Marek Polacek  <polacek@redhat.com>
+
+	PR middle-end/67005
+	* gcc.dg/torture/pr67005.c: New test.
+
 2015-08-27  Pat Haugen  <pthaugen@us.ibm.com>
 
 	Backport from mainline:
