@@ -1,3 +1,12 @@
+2015-08-31  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
+	2015-08-27  Marek Polacek  <polacek@redhat.com>
+
+	PR middle-end/67005
+	* tree-ssa-dce.c (remove_dead_stmt): Also schedule fixup if removing
+	an entry into an irreducible region.
+
 2015-08-27  Pat Haugen  <pthaugen@us.ibm.com>
 
 	Backport from mainline:
